--- a/index.html
+++ b/index.html
@@ -8,27 +8,146 @@
     <title>Document</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <style>
-        body {
-            background-color: antiquewhite;
-        }
-
-        .nav-bar {
-            margin: 20px 0px;
-        }
-
-        .top {
-            margin-bottom: 20px;
-        }
-
-        .footer {
-            margin-top: 20px;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    
+    <!-- Top header start -->
+    <div class="top_header bg-dark">
+        <div class="container">
+            <div>
+                <div class="row">
+                    <div class="col-md-6">
+                        <h1 class="text-light">Tên cửa hàng</h1>
+                    </div>
+                    <div class="col-md-3">
+                        <h1 class="text-light">số điện thoại</h1>
+                    </div>
+                    <div class="col-md-3">
+                        <h1 class="text-light">địa chỉ email</h1>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+    </div>
+    <!-- Top header end -->
+    <!-- Header star -->
+    <div class="header_main">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-3">
+                    <h1>Logo</h1>
+                </div>
+                <div class="col-md-6">
+                    <div class="nav_bar">
+                        <ul class="d-flex flex-row-reverse">
+                            <li>
+                                <h3 class="p-2">Contact</h3>
+                            </li>
+                            <li>
+                                <h3 class="p-2">Service</h3>
+                            </li>
+                            <li>
+                                <h3 class="p-2">About</h3>
+                            </li>
+                            <li>
+                                <h3 class="p-2">Home</h3>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="d-flex justify-content-center">
+                        <h3 class="p-2">Search</h3>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+    </div>
+    <!-- Header end -->
+    <!-- Banner star -->
+    <div class="banner">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-5">
+                    <h1>Img</h1>
+                </div>
+                <div class="col-md-7">
+                    <h1>Title</h1>
+                    <p>Content</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Banner end -->
+    <!-- Content start -->
+    <div class="best_seller">
+        <div class="container">
+            <h1 class="d-flex justify-content-center">Best Sealer</h1>
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="row">
+                        <div class="col-md-4">
+                            <h1>Img</h1>
+                        </div>
+                        <div class="col-md-8">
+                            <h1>Detail</h1>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="row">
+                        <div class="col-md-4">
+                            <h1>Img</h1>
+                        </div>
+                        <div class="col-md-8">
+                            <h1>Detail</h1>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="service">
+        <div class="container">
+            <h1 class="d-flex justify-content-center">Service</h1>
+            <div class="row">
+                <div class="col-md-4">
+                    <h1>Service 1</h1>
+                </div>
+                <div class="col-md-4">
+                    <h1>Service 2</h1>
+                </div>
+                <div class="col-md-4">
+                    <h1>Service 3</h1>
+                </div>
+            </div>
+        </div>
+
+    </div>
+    <!-- Content end -->
+    <!-- Footer start -->
+    <div class="footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <h1>footer 1</h1>
+                </div>
+                <div class="col-md-4">
+                    <h1>footer 2</h1>
+                </div>
+                <div class="col-md-4">
+                    <h1>footer 3</h1>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Footer end -->
 </body>
 
 </html>
