--- a/Bootstrap4/conFusion/aboutus.html
+++ b/Bootstrap4/conFusion/aboutus.html
@@ -236,11 +236,13 @@
                 <div class="col-7 col-sm-5">
                     <h5>Our Address</h5>
                     <address>
+                        121, Clear Water Bay Road<br>
+                        Clear Water Bay, Kowloon<br>
+                        HONG KONG<br>
                         <i class="fa fa-phone fa-lg"></i>: +852 1234 5678<br>
                         <i class="fa fa-fax fa-lg"></i>: +852 8765 4321<br>
                         <i class="fa fa-envelope fa-lg"></i>:
                         <a href="mailto:confusion@food.net">confusion@food.net</a>
-
                     </address>
                 </div>
                 <div class="col-12 col-sm-4 align-self-center">
@@ -257,12 +259,11 @@
                                 class="fa fa-youtube"></i></a>
                         <a class="btn btn-social-icon" href="mailto:"><i class="fa fa-envelope-o"></i></a>
                     </div>
-
                 </div>
             </div>
             <div class="row justify-content-center">
                 <div class="col-auto">
-                    <p>© Copyright 2018 Ristorante Con Fusion</p>
+                    <p>© Copyright 2018 Ristorante ConFusion</p>
                 </div>
             </div>
         </div>
