--- a/Bootstrap4/conFusion/index.html
+++ b/Bootstrap4/conFusion/index.html
@@ -40,13 +40,57 @@
                             Contact</a></li>
 
                 </ul>
-            </div>
+                <!-- EX 16 -->
+                <span class="navbar-text">
+                    <a data-toggle="modal" data-target="#loginModal">
+                        <span class="fa fa-sign-in"></span> Login</a>
+                </span>
 
+                <!-- EX 16 -->
+            </div>
         </div>
     </nav>
-
-
-
+    <!-- EX 16 -->
+    <div id="loginModal" class="modal fade" role="dialog">
+        <div class="modal-dialog modal-lg" role="content">
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Login </h4>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-row">
+                            <div class="form-group col-sm-4">
+                                <label class="sr-only" for="exampleInputEmail3">Email address</label>
+                                <input type="email" class="form-control form-control-sm mr-1" id="exampleInputEmail3"
+                                    placeholder="Enter email">
+                            </div>
+                            <div class="form-group col-sm-4">
+                                <label class="sr-only" for="exampleInputPassword3">Password</label>
+                                <input type="password" class="form-control form-control-sm mr-1"
+                                    id="exampleInputPassword3" placeholder="Password">
+                            </div>
+                            <div class="col-sm-auto">
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox">
+                                    <label class="form-check-label"> Remember me
+                                    </label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-row">
+                            <button type="button" class="btn btn-secondary btn-sm ml-auto"
+                                data-dismiss="modal">Cancel</button>
+                            <button type="submit" class="btn btn-primary btn-sm ml-1">Sign in</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- EX 16 -->
     <header class="jumbotron">
         <div class="container">
             <div class="row row-header">
@@ -55,12 +99,6 @@
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our
                         lipsmacking creations will tickle your culinary senses!</p>
                 </div>
-                <!-- <div class="col-12 col-sm">
-                    <div class="col-12 col-sm align-self-center">
-                        <img src="img/logo.png" class="img-fluid">
-                    </div>
-                </div> -->
-                <!--  -->
                 <div class="col-12 col-sm-3">
                     <div class="col-12 col-sm align-self-center">
                         <img src="img/logo.png" class="img-fluid">
@@ -68,7 +106,9 @@
                 </div>
                 <div class="col-12 col-sm-3">
                     <div class="col-12 col-sm align-self-center">
-                        <a href="#form" class="btn-sm btn-warning">Reserve Table</a>
+                        <a role="button" class="btn btn-block nav-link btn-warning" data-toggle="tooltip"
+                            data-html="true" title="Or Call us at  <br><strong>+852 12345678</strong>"
+                            data-placement="bottom" href="#reserveform">Reserve Table</a>
                     </div>
                 </div>
             </div>
@@ -143,7 +183,7 @@
         </div>
         <div class="col-12 col-md-9">
             <!-- Form goes here -->
-            <form id="form">
+            <form id="reserveform">
                 <div class="form-group row">
                     <label for="firstname" class="col-md-2 col-form-label">Number of Guests</label>
                     <div class="col-md-10">
@@ -240,6 +280,12 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
+    <script>
+        $(document).ready(function () {
+            $('[data-toggle="tooltip"]').tooltip();
+        });
+    </script>
+
 </body>
 
 </html>
