--- a/Bootstrap4/conFusion/index.html
+++ b/Bootstrap4/conFusion/index.html
@@ -116,6 +116,67 @@
     </header>
 
     <div class="container">
+        <!-- EX 17 -->
+        <div class="row row-content">
+            <div class="col">
+                <div id="mycarousel" class="carousel slide" data-ride="carousel">
+                    <div class="carousel-inner" role="listbox">
+                        <div class="carousel-inner" role="listbox">
+                            <div class="carousel-item active">
+                                <img class="d-block img-fluid" src="img/uthappizza.png" alt="Uthappizza">
+                                <div class="carousel-caption d-none d-md-block">
+                                    <h2>Uthappizza
+                                        <span class="badge badge-danger">HOT</span>
+                                        <span class="badge badge-pill badge-default">$4.99</span>
+                                    </h2>
+                                    <p class="d-none d-sm-block">A unique combination of Indian Uthappam (pancake) and
+                                        Italian pizza, topped with Cerignola olives, ripe vine
+                                        cherry tomatoes, Vidalia onion, Guntur chillies and
+                                        Buffalo Paneer.</p>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <img class="d-block img-fluid" src="img/uthappizza.png" alt="Uthappizza">
+                                <div class="carousel-caption d-none d-md-block">
+                                    <h2>Weekend Grand Buffet
+                                        <span class="badge badge-danger">NEW</span>
+
+                                    </h2>
+                                    <p class="d-none d-sm-block">A unique combination of Indian Uthappam (pancake) and
+                                        Italian pizza, topped with Cerignola olives, ripe vine
+                                        cherry tomatoes, Vidalia onion, Guntur chillies and
+                                        Buffalo Paneer.</p>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <img class="d-block img-fluid" src="img/uthappizza.png" alt="Uthappizza">
+                                <div class="carousel-caption d-none d-md-block">
+                                    <h2>Executive Chef</h2>
+                                    <p class="d-none d-sm-block">Award winning three-star Michelin chef with wide
+                                        International experience having worked closely with
+                                        whos-who in the culinary world, he specializes in
+                                        creating mouthwatering Indo-Italian fusion experiences.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                    <ol class="carousel-indicators">
+                        <li data-target="#mycarousel" data-slide-to="0" class="active"></li>
+                        <li data-target="#mycarousel" data-slide-to="1"></li>
+                        <li data-target="#mycarousel" data-slide-to="2"></li>
+                    </ol>
+                    <a class="carousel-control-prev" href="#mycarousel" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon"></span>
+                    </a>
+                    <a class="carousel-control-next" href="#mycarousel" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon"></span>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <!-- EX 17 -->
         <div class="row row-content d-flex flex-row-reverse">
             <div class="col-12 col-sm-4 col-md-3">
                 <h3>Our Lipsmacking Culinary Creations</h3>
