--- a/Bootstrap4/conFusion/index.html
+++ b/Bootstrap4/conFusion/index.html
@@ -12,7 +12,8 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css">
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 
 <body>
@@ -106,15 +107,95 @@
                 </div>
                 <div class="col-12 col-sm-3">
                     <div class="col-12 col-sm align-self-center">
-                        <a role="button" class="btn btn-block nav-link btn-warning" data-toggle="tooltip"
-                            data-html="true" title="Or Call us at  <br><strong>+852 12345678</strong>"
-                            data-placement="bottom" href="#reserveform">Reserve Table</a>
+                        <span class="navbar-text">
+                            <a data-toggle="modal" data-target="#tableReserve">
+                                <button class="btn btn-block nav-link btn-warning" data-toggle="tooltip"
+                                    data-html="true" title="Or Call us at  <br><strong>+852 12345678</strong>"
+                                    data-placement="bottom">
+                                    Reserve Table</button>
+                            </a>
+                        </span>
                     </div>
                 </div>
             </div>
         </div>
     </header>
+    <!-- Lap 3 -->
+    <div id="tableReserve" class="modal fade" role="dialog">
+        <div class="modal-dialog modal-lg" role="content">
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h3 class="text-dark">Reserve a Table</h3>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+                <div class="modal-body">
+                    <div class="col-12 col-md-9">
+                        <form id="reserveform">
+                            <div class="form-group row">
+                                <label for="firstname" class="col-md-2 col-form-label">Number of Guests</label>
+                                <div class="col-md-10">
+                                    <input type="radio" name="ratio-group"> <label for="">1</label>
+                                    <input type="radio" name="ratio-group" style="margin-left: 15px;"> <label
+                                        for="">2</label>
+                                    <input type="radio" name="ratio-group" style="margin-left: 15px;"> <label
+                                        for="">3</label>
+                                    <input type="radio" name="ratio-group" style="margin-left: 15px;"> <label
+                                        for="">4</label>
+                                    <input type="radio" name="ratio-group" style="margin-left: 15px;"> <label
+                                        for="">5</label>
+                                    <input type="radio" name="ratio-group" style="margin-left: 15px;"> <label
+                                        for="">6</label>
+                                </div>
+                            </div>
+                            <!--  -->
+                            <div class="form-group row">
+                                <label for="firstname" class="col-md-2 col-form-label">Section</label>
+                                <div class="col-md-10">
+                                    <input type="radio" class="btn-check" name="options-outlined" id="success-outlined"
+                                        autocomplete="off" checked>
+                                    <label class="btn btn-outline-success" for="success-outlined">Non-Smoking</label>
 
+                                    <input type="radio" class="btn-check" name="options-outlined" id="danger-outlined"
+                                        autocomplete="off">
+                                    <label class="btn btn-outline-danger" for="danger-outlined">Smocking</label>
+
+                                </div>
+                            </div>
+                            <!--  -->
+                            <div class="form-group row">
+                                <label for="date-time" class="col-12 col-md-2 col-form-label">Date and Time</label>
+                                <div class="col-6 col-md-5">
+                                    <input type="tel" class="form-control" id="areacode" name="areacode"
+                                        placeholder="Date">
+                                </div>
+                                <div class="col-6 col-md-5">
+                                    <input type="tel" class="form-control" id="telnum" name="telnum" placeholder="Time">
+                                </div>
+                            </div>
+                            <!--  -->
+                            <div class="form-row">
+                                <div class="col-md-2">
+                                </div>
+                                <div class="col-md-10">
+                                    <button type="button" class="btn btn-secondary btn-sm ml-auto"
+                                        data-dismiss="modal">Cancel</button>
+                                    <button type="submit" class="btn btn-primary btn-sm ml-1">Reserve</button>
+                                </div>
+                            </div>
+                            <!--  -->
+                        </form>
+                    </div>
+                    <div class="col-12 col-md">
+                    </div>
+                </div>
+
+            </div>
+
+        </div>
+
+    </div>
+    <!-- Lap 3 -->
     <div class="container">
         <!-- EX 17 -->
         <div class="row row-content">
@@ -237,52 +318,7 @@
             </div>
         </div>
     </div>
-    <!--  -->
-    <div class="form row row-content d-flex justify-content-center">
-        <div class="head-form col-12 bg-warning">
-            <h3 class="text-light">Send us your Feedback</h3>
-        </div>
-        <div class="col-12 col-md-9">
-            <!-- Form goes here -->
-            <form id="reserveform">
-                <div class="form-group row">
-                    <label for="firstname" class="col-md-2 col-form-label">Number of Guests</label>
-                    <div class="col-md-10">
-                        <input type="radio" name="ratio-group"> <label for="">1</label>
-                        <input type="radio" name="ratio-group"> <label for="">2</label>
-                        <input type="radio" name="ratio-group"> <label for="">3</label>
-                        <input type="radio" name="ratio-group"> <label for="">4</label>
-                        <input type="radio" name="ratio-group"> <label for="">5</label>
-                        <input type="radio" name="ratio-group"> <label for="">6</label>
-                    </div>
-                </div>
-                <!--  -->
-                <div class="form-group row">
-                    <label for="date-time" class="col-12 col-md-2 col-form-label">Date and Time</label>
-                    <div class="col-6 col-md-5">
-                        <input type="tel" class="form-control" id="areacode" name="areacode" placeholder="Date">
-                    </div>
-                    <div class="col-6 col-md-5">
-                        <input type="tel" class="form-control" id="telnum" name="telnum" placeholder="Time">
-                    </div>
-                </div>
-                <!--  -->
-                <div class="form-group row">
-                    <div class="offset-md-2 col-md-10">
-                        <button type="submit" class="btn btn-primary">Reserve</button>
-                    </div>
-                </div>
-                <!--  -->
-            </form>
-            <!--  -->
 
-            <!--  -->
-
-        </div>
-        <div class="col-12 col-md">
-        </div>
-    </div>
-    <!--  -->
     <footer class="footer">
         <div class="container">
             <div class="row">
