--- a/Bootstrap4/conFusion/index.html
+++ b/Bootstrap4/conFusion/index.html
@@ -210,10 +210,7 @@
                                         <span class="badge badge-danger">HOT</span>
                                         <span class="badge badge-pill badge-default">$4.99</span>
                                     </h2>
-                                    <p class="d-none d-sm-block">A unique combination of Indian Uthappam (pancake) and
-                                        Italian pizza, topped with Cerignola olives, ripe vine
-                                        cherry tomatoes, Vidalia onion, Guntur chillies and
-                                        Buffalo Paneer.</p>
+
                                 </div>
                             </div>
                             <div class="carousel-item">
@@ -221,23 +218,16 @@
                                 <div class="carousel-caption d-none d-md-block">
                                     <h2>Weekend Grand Buffet
                                         <span class="badge badge-danger">NEW</span>
-
+                                        <span class="badge badge-pill badge-default">$4.99</span>
                                     </h2>
-                                    <p class="d-none d-sm-block">A unique combination of Indian Uthappam (pancake) and
-                                        Italian pizza, topped with Cerignola olives, ripe vine
-                                        cherry tomatoes, Vidalia onion, Guntur chillies and
-                                        Buffalo Paneer.</p>
+
                                 </div>
                             </div>
                             <div class="carousel-item">
                                 <img class="d-block img-fluid" src="img/uthappizza.png" alt="Uthappizza">
                                 <div class="carousel-caption d-none d-md-block">
                                     <h2>Executive Chef</h2>
-                                    <p class="d-none d-sm-block">Award winning three-star Michelin chef with wide
-                                        International experience having worked closely with
-                                        whos-who in the culinary world, he specializes in
-                                        creating mouthwatering Indo-Italian fusion experiences.
-                                    </p>
+
                                 </div>
                             </div>
                         </div>
@@ -254,6 +244,19 @@
                     <a class="carousel-control-next" href="#mycarousel" role="button" data-slide="next">
                         <span class="carousel-control-next-icon"></span>
                     </a>
+                    <!-- ex 18 -->
+                    <!-- <div class="btn-group" id="carouselButton">
+                        <button class="btn btn-danger btn-sm" id="carousel-pause">
+                            <span class="fa fa-pause"></span>
+                        </button>
+                        <button class="btn btn-danger btn-sm" id="carousel-play">
+                            <span class="fa fa-play"></span>
+                        </button>
+                    </div> -->
+                    <button class="btn btn-danger btn-sm" id="carouselButton">
+                        <span id="carousel-button-icon" class="fa fa-pause"></span>
+                    </button>
+                    <!-- ex 18 -->
                 </div>
             </div>
         </div>
@@ -381,6 +384,28 @@
         $(document).ready(function () {
             $('[data-toggle="tooltip"]').tooltip();
         });
+        $(document).ready(function () {
+            $("#mycarousel").carousel({ interval: 2000 });
+            $("#carousel-pause").click(function () {
+                $("#mycarousel").carousel('pause');
+            });
+            $("#carousel-play").click(function () {
+                $("#mycarousel").carousel('cycle');
+            });
+        });
+        $("#carouselButton").click(function () {
+            if ($("#carouselButton").children("span").hasClass('fa-pause')) {
+                $("#mycarousel").carousel('pause');
+                $("#carouselButton").children("span").removeClass('fa-pause');
+                $("#carouselButton").children("span").addClass('fa-play');
+            }
+            else if ($("#carouselButton").children("span").hasClass('fa-play')) {
+                $("#mycarousel").carousel('cycle');
+                $("#carouselButton").children("span").removeClass('fa-play');
+                $("#carouselButton").children("span").addClass('fa-pause');
+            }
+        });
+
     </script>
 
 </body>
