--- a/Bootstrap4/conFusion/index.html
+++ b/Bootstrap4/conFusion/index.html
@@ -214,7 +214,7 @@
                                 </div>
                             </div>
                             <div class="carousel-item">
-                                <img class="d-block img-fluid" src="img/uthappizza.png" alt="Uthappizza">
+                                <img class="d-block img-fluid" src="img/buffet.png" alt="Uthappizza">
                                 <div class="carousel-caption d-none d-md-block">
                                     <h2>Weekend Grand Buffet
                                         <span class="badge badge-danger">NEW</span>
@@ -224,7 +224,7 @@
                                 </div>
                             </div>
                             <div class="carousel-item">
-                                <img class="d-block img-fluid" src="img/uthappizza.png" alt="Uthappizza">
+                                <img class="d-block img-fluid" src="img/alberto.png" alt="Uthappizza">
                                 <div class="carousel-caption d-none d-md-block">
                                     <h2>Executive Chef</h2>
 
