--- a/Bootstrap4/conFusion/index.html
+++ b/Bootstrap4/conFusion/index.html
@@ -210,7 +210,10 @@
                                         <span class="badge badge-danger">HOT</span>
                                         <span class="badge badge-pill badge-default">$4.99</span>
                                     </h2>
-
+                                    <p>A unique combination of Indian Uthappam (pancake) and
+                                        Italian pizza, topped with Cerignola olives, ripe vine
+                                        cherry tomatoes, Vidalia onion, Guntur chillies and
+                                        Buffalo Paneer.</p>
                                 </div>
                             </div>
                             <div class="carousel-item">
@@ -220,14 +223,22 @@
                                         <span class="badge badge-danger">NEW</span>
                                         <span class="badge badge-pill badge-default">$4.99</span>
                                     </h2>
-
+                                    <p>Featuring mouthwatering combinations with a choice of five different salads, six
+                                        enticing appetizers,
+                                        six main entrees and five choicest desserts. Free flowing bubbly and soft
+                                        drinks. All for just
+                                        $19.99 per person </p>
                                 </div>
                             </div>
                             <div class="carousel-item">
                                 <img class="d-block img-fluid" src="img/alberto.png" alt="Uthappizza">
                                 <div class="carousel-caption d-none d-md-block">
                                     <h2>Executive Chef</h2>
-
+                                    <p class="d-none d-sm-block">Award winning three-star Michelin chef with wide
+                                        International experience having worked closely with
+                                        whos-who in the culinary world, he specializes in
+                                        creating mouthwatering Indo-Italian fusion experiences.
+                                    </p>
                                 </div>
                             </div>
                         </div>
