--- a/Bootstrap4/conFusion/index.html
+++ b/Bootstrap4/conFusion/index.html
@@ -44,8 +44,7 @@
                 </ul>
                 <!-- EX 16 -->
                 <span class="navbar-text">
-                    <a data-toggle="modal" data-target="#loginModal">
-                        <span class="fa fa-sign-in"></span> Login</a>
+                    <a id="openLogin"><i class="fa fa-sign-in"></i> Login</a>
                 </span>
 
                 <!-- EX 16 -->
@@ -109,8 +108,8 @@
                 <div class="col-12 col-sm-3">
                     <div class="col-12 col-sm align-self-center">
                         <span class="navbar-text">
-                            <a data-toggle="modal" data-target="#tableReserve">
-                                <button class="btn btn-block nav-link btn-warning" data-toggle="tooltip"
+                            <a>
+                                <button id="openBtn" class="btn btn-block nav-link btn-warning" data-toggle="tooltip"
                                     data-html="true" title="Or Call us at  <br><strong>+852 12345678</strong>"
                                     data-placement="bottom">
                                     Reserve Table</button>
